<resources>
    <string name="app_name">GiraffeHero</string>

    <string name="recycler_view_complex">Complex Page</string>
    <string name="recycler_view_empty_view">Empty View</string>
    <string name="recycler_view_notify_decoration">Notify Decoration</string>
    <string name="recycler_view_notify_section">Notify Section</string>
    <string name="recycler_view_change_animation">Change Animation</string>
    <string name="recycler_view_enter_animation">Enter Animation</string>

    <string name="giraffe_hero_title">Giraffe Hero</string>
    <string name="giraffe_hero_content">content</string>

    <string name="empty_button_add_data">add data</string>
    <string name="empty_button_clear_data">clear data</string>
    <string name="empty_click_message">click!</string>

    <string name="complex_button_add">Add</string>
    <string name="complex_button_remove">Remove</string>
    <string name="complex_button_change">Change</string>
    <string name="complex_project_header">Developed component library</string>
    <string name="complex_empty_tip">No content, click to load data</string>

    <string name="introduce_rafiki_permissions">RafikiPermissions is to simplify Android runtime permission request. The name Rafiki comes from the baboon elder who manages permission in LION KING :D</string>
    <string name="introduce_giant_panda">GiantPandaDialog is to simplify the usage of Android Dialog. We could build a general dialog with just one line of code. The usage is similar to iOS UIAlertController and it is based on DialogFragment. </string>
    <string name="introduce_lesser_panda">LesserPandaToast provides the simplest solution to call different types of progresshuds or toasts and dismiss them in an indicated delay. </string>
    <string name="introduce_new_item">developing projects</string>

    <string name="enter_animation_hybrid">Hybrid Animation</string>
    <string name="enter_animation_scale">Scale Animation</string>
    <string name="enter_animation_slide">Slide Animation</string>

    <string name="animation_flip">Flip Animation</string>
    <string name="animation_fade">Fade Animation</string>
    <string name="animation_scale">Scale Animation</string>
    <string name="animation_translation">Translation Animation</string>

    <string name="direction_left">left</string>
    <string name="direction_right">right</string>
    <string name="direction_top">top</string>
    <string name="direction_bottom">bottom</string>

    <string name="coordinate_center">center</string>
    <string name="coordinate_x">x</string>
    <string name="coordinate_y">y</string>

    <string name="add">add</string>
    <string name="remove">remove</string>
    <string name="move">move</string>
    <string name="change">change</string>

</resources>
