<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        app:navigationIcon="@drawable/ic_arrow_back_white_24dp"
        app:title="@string/recycler_view_enter_animation"
        app:titleTextColor="@color/white">


    </androidx.appcompat.widget.Toolbar>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onHybridAnimClick"
        android:text="@string/enter_animation_hybrid"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onScaleAnimClick"
        android:text="@string/enter_animation_scale"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onSlideAnimClick"
        android:text="@string/enter_animation_slide"/>

</LinearLayout>
