<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        app:navigationIcon="@drawable/ic_arrow_back_white_24dp"
        app:title="RecyclerView Animation"
        app:titleTextColor="@color/white">


    </android.support.v7.widget.Toolbar>

    <Button
        android:id="@+id/btn_anim_fade"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onFadeAnimClick"
        android:text="@string/animation_fade" />

    <Button
        android:id="@+id/btn_anim_flip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onFlipAnimClick"
        android:text="@string/animation_flip" />

    <Button
        android:id="@+id/btn_anim_scale"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onScaleAnimClick"
        android:text="@string/animation_scale" />

    <Button
        android:id="@+id/btn_anim_translation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onTranslationClick"
        android:text="@string/animation_translation" />

</LinearLayout>
